# home_work24.1

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  groups.json  pyproject.toml
config/: celery.py  settings.py  urls.py
materials/: models.py  paginators.py  serializer.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_course_link_lesson_link.py  0004_subscription.py
users/: models.py  permissions.py  serializer.py  services.py  urls.py  views.py
users/management/commands/: csu.py  fill.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_options_alter_payment_payment_method.py  0004_payment_payment_url_payment_session_id.py
